# expfit

./: .flake8  .gitignore  LICENSE  README.md  ff.py  hess-temp.ipynb  pyproject.toml  scan-tau.py  scan.py
.github/woikflows/: coverage.yml
.github/workflows/: style-test.yml  unit-tests-ubuntu.yml
docs/: Expfit.ipynb  conf.ipynb  expfit-0-outline.ipynb  expfit-1-initial-guess-single.ipynb  expfit-1-initial-guess.ipynb  expfit-1-single-estimate-tau.ipynb  expfit-1-single-estimate.ipynb  expfit-1x-initial-guess-single-old.ipynb  expfit-2-jacobian-and-hessian.ipynb  expfit-2-single-exponential-error-and-fit-tau.ipynb  expfit-2-single-exponential-error-and-fit.ipynb  expfit-3-confidence-intervals.ipynb  expfit-3-jacobian-and-hessian-general.ipynb  expfit-3-multiple-exponentials.ipynb  expfit-3b-jacobian-and-hessian-general.ipynb  expfit-4-confidence-intervals.ipynb  expfit-4a-multi-exponential-error.ipynb  expfit-4b-c-bounds.ipynb  expfit-4b-special-forms.ipynb  expfit-5-double-decaying.ipynb  expfit-6-model-selection.ipynb  expfit-999-double-decaying.ipynb  expfit-X-b-bounds.ipynb  profile.ipynb
expfit/: __init__.py  _ci.py  _double.py  _err.py  _est.py  _ex.py  _expfit_version.py  _fit.py  _linear.py  _opt.py  _plot.py  _series.py  _single.py  _tau.py  _trans.py  _vetting.py
expfit/tests/: __init__.py  test.py  test_auto.py  test_ci.py  test_double.py  test_err.py  test_est.py  test_fit1.py  test_fit1_rw.py  test_fitd11.py  test_fitd11log.py  test_fitd2.py  test_fitd2_ec.py  test_fitd2log.py  test_fitd2loglog.py  test_initial.py  test_jac.py  test_least_squares.py  test_linear.py  test_opt.py  test_series.py  test_single.py  test_single_rw1.py  test_trans.py  test_vetting.py
src/: cerr.c
