[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=80']

[project]
requires-python = '>=3.8'
readme = { file = 'README.md', content-type = 'text/markdown' }

name = 'expfit'
description = 'TODO'
authors = [
    {name='Michael Clerx', email='michael.clerx@nottingham.ac.uk'}
]

classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
]

dependencies = [
    'numpy>=1.21',
]

[project.optional-dependencies]
dev = [
    'coverage',             # For coverage testing
    'codecov>=2.1.3',       # To upload coverage reports
    'flake8>=3',            # For code style checking
    'mypy>=1',              # For type hint checking

    'matplotlib>=3.4',
]

[project.urls]
Homepage = 'https://github.com/myokit/expfit'
Source = 'https://github.com/myokit/expfit'

#[tools.setuptools.package-data]
#include_package_data = true

[tool.setuptools.packages.find]
include = ['expfit']

[tool.mypy]
modules = ['expfit']

[tool.coverage.run]
source = ['expfit']
omit = []

