[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=80']

[project]
requires-python = '>=3.9'
dynamic = ['version', 'readme']

name = 'expfit'
description = 'A package to fit noisy time series with 1 to 4 exponentials.'
authors = [
    {name='Michael Clerx', email='michael.clerx@nottingham.ac.uk'}
]

classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
]

dependencies = [
    'numpy>=1.18',
]

[project.optional-dependencies]
dev = [
    'coverage',             # For coverage testing
    'codecov>=2.1.3',       # To upload coverage reports
    'flake8>=3',            # For code style checking
    'matplotlib>=3.4',
]

[project.urls]
Homepage = 'https://github.com/myokit/expfit'
Source = 'https://github.com/myokit/expfit'

[tool.setuptools]
ext-modules = [
    {name = 'expfit._cerr', sources = ['src/cerr.c']}
]

[tool.setuptools.dynamic]
version = {attr = 'expfit._expfit_version.__version__'}
readme = { file = 'README.md', content-type = 'text/markdown'}

[tool.setuptools.packages.find]
include = ['expfit']

#[tools.setuptools.package-data]
#include_package_data = true

[tool.mypy]
modules = ['expfit']

[tool.coverage.run]
command_line = '-m unittest'
source = ['expfit']
omit = ['expfit/_plot.py']

[tool.coverage.report]
show_missing = 'true'

